# fastapi_kafka_chat

./: .gitignore  Dockerfile  Makefile  pyproject.toml
app/application/api/: main.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: base.py  messages.py
app/domain/values/: base.py  messages.py
app/infra/repositories/: messages.py
app/logic/: init.py  mediator.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py
app/logic/exceptions/: base.py  mediator.py  messages.py
app/tests/: conftest.py  test_messages.py
app/tests/values/domain/: test_messages.py
docker_compose/: app.yaml
