[tool.poetry]
name = "fastapi-kafka-chat"
version = "0.1.0"
description = ""
authors = ["box7 <theverynvg@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
motor = "^3.5.1"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
