[tool.poetry]
name = "fastapi-kafka-chat"
version = "0.1.0"
description = ""
authors = ["box7 <theverynvg@vk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.1"
motor = "^3.5.1"
uvicorn = "^0.30.1"
pytest = "^8.2.2"
faker = "^26.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
